<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/radius_1"
    android:orientation="vertical"

    android:id="@+id/mainLayout"

    android:backgroundTint="?attr/dialogBackgroundColor"

    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        style="@style/customTextViewColorMedium"

        android:id="@+id/title"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="15dp"

        android:layout_gravity="center"

        android:text="@string/text_file_upload_manager"
        android:textSize="18sp"/>

    <TextView
        style="@style/customTextViewColorLight"

        android:id="@+id/message"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="15dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="15dp"

        android:layout_gravity="center"

        android:textColor="@color/gray_2"
        android:text="@string/text_upload_manager_message"
        android:textSize="13sp"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"

            android:layout_width="match_parent"
            android:layout_height="180dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/progressBarLayout"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/noItemValue"

            style="@style/customTextViewColorLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center"

            android:text="@string/text_no_value"
            android:textColor="@color/gray_2"
            android:textSize="13sp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <android.widget.Button
        android:id="@+id/button1"

        style="@style/customTextViewColorLight"
        android:layout_width="match_parent"
        android:layout_height="40dp"

        android:layout_marginTop="15dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"

        android:background="@drawable/button_3"

        android:gravity="center"
        android:textSize="14sp"
        android:textColor="@color/white_org"
        android:text="@string/text_file_select"/>

    <android.widget.Button
        android:id="@+id/button2"

        style="@style/customTextViewColorLight"
        android:layout_width="match_parent"
        android:layout_height="40dp"

        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"

        android:background="@drawable/button_for_dialog_1"
        android:stateListAnimator="@null"

        android:gravity="center"
        android:textSize="14sp"
        android:text="@string/text_select_reset"/>
</LinearLayout>