<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/radius_1"
    android:orientation="vertical"

    android:id="@+id/mainLayout"

    android:backgroundTint="?attr/dialogBackgroundColor"

    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        style="@style/customTextViewColorMedium"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="15dp"

        android:layout_gravity="center"

        android:text="@string/text_need_update"
        android:textSize="18sp"/>

    <TextView
        style="@style/customTextViewColorLight"

        android:id="@+id/message"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"

        android:layout_gravity="center"

        android:textColor="@color/gray_2"
        android:text="@string/text_need_update_message"
        android:textSize="13sp"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/progressBarLayout"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:visibility="gone"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.github.ybq.android.spinkit.SpinKitView
                android:id="@+id/spinKitViewCubeGrid"

                style="@style/SpinKitView.Small.CubeGrid"
                android:layout_width="wrap_content"
                android:layout_height="30dp"

                android:layout_gravity="center"

                app:SpinKit_Color="@color/black_1"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/taskMessageTextView"

                style="@style/customTextViewColorMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="5dp"
                android:gravity="center"
                android:text="@string/text_loading"

                android:textSize="15sp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/spinKitViewCubeGrid"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <android.widget.Button
        android:id="@+id/button"

        style="@style/customTextViewColorLight"
        android:layout_width="match_parent"
        android:layout_height="40dp"

        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"

        android:background="@drawable/button_for_dialog_1"
        android:stateListAnimator="@null"

        android:gravity="center"
        android:textSize="14sp"
        android:text="@string/text_update"/>
</LinearLayout>